# cmake-stm32

./: .clang-format  .clangd  .cross.cmake  CMakeLists.txt  CMakePresets.json  NOTE  cross.cmake  cross.ini
.docs/: NOTE
STM32CubeMX/: .mxproject  STM32CubeMX.ioc
STM32CubeMX/Src/: dma.c  gpio.c  main.c  spi.c  stm32f4xx_it.c  tim.c  usart.c
STM32CubeMX/cmake/stm32cubemx/: CMakeLists.txt
STM32CubeMX/refactoring/: STM32F407XX_FLASH.ld  startup_stm32f407xx.S
_docs/: CMakePresets.json.example  NOTE
_st/: .mxproject  CMakeLists.txt
_st/Inc/: main.h  stm32f4xx_it.h
core/: indicator.cpp  indicator.cppm  main.cpp  main.hpp  my_std.cppm  retarget_io.cpp  test.cppm
